--- a/_sass/_download.scss
+++ b/_sass/_download.scss
@@ -21,6 +21,13 @@
   }
 }
 
+.download-note {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.8;
+  color: $text-secondary;
+}
+
 .code-block {
   background-color: $blue-dark;
   padding: 15px;
