--- a/_sass/_tutorials.scss
+++ b/_sass/_tutorials.scss
@@ -1,5 +1,23 @@
+.tutorials-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 60px;
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.tutorial-category {
+  h2.category-title {
+    color: $blue-accent;
+    border-bottom: 2px solid $blue-accent;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+  }
+}
+
 .tutorial-item {
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   border-bottom: 1px solid rgba($blue-light, 0.3);
   padding-bottom: 40px;
   &:last-child {
